# ETL-Platform

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FIRST_TIME_SETUP.md  LICENSE  LOCAL_DEVELOPMENT.md  README.md  alembic.ini  build.sh  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements-render.txt  requirements.txt  start.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  dependencies.py  error_handlers.py
app/auth/: __init__.py  api_key_manager.py  auth_service.py  jwt_handler.py  password.py  rbac.py  user_service.py
app/cleaning/: __init__.py  action_logger.py  base_cleaner.py  business_rule_cleaner.py  categorical_cleaner.py  cleaner.py  cleaning_executor.py  cleaning_registry.py  date_standardizer.py  deduplication.py  models.py  null_handler.py  numeric_cleaner.py  string_normalizer.py
app/core/: __init__.py  application.py  config.py  config_loader.py  config_registry.py  exceptions.py
app/dashboard/: __init__.py  router.py
app/database/: __init__.py  base.py  engine.py  init_db.py  transaction.py
app/ingestion/: __init__.py  dataset_type_resolver.py  directory_watcher.py  file_receiver.py  file_type_detector.py  hash_generator.py  ingestion_service.py  ingestion_tracker.py  metadata_extractor.py  models.py  raw_file_store.py
app/loading/: __init__.py  load_registry.py  loader.py  models.py  upsert_manager.py
app/logging/: __init__.py  audit_emitter.py  logger.py  pii_masker.py
app/middleware/: __init__.py  logging_middleware.py  metrics_middleware.py  request_id_middleware.py  security_headers_middleware.py
app/observability/: __init__.py  metrics.py
app/pipeline/: __init__.py  checkpoint_manager.py  context.py  engine.py  models.py  pipeline_registry.py  retry_manager.py  scheduler.py  stage_executor.py  trigger_service.py
app/reporting/: __init__.py  business_report_builder.py  models.py  orchestrator.py  quality_report_builder.py  report_exporter.py  report_file_store.py
app/transformation/: __init__.py  aggregation_builder.py  base_transformer.py  derived_field_calculator.py  field_mapper.py  lookup_enricher.py  models.py  transformation_engine.py  transformation_executor.py  transformer_registry.py
app/utils/: constants.py  date_utils.py  file_utils.py  hash_utils.py  string_utils.py
app/validation/: __init__.py  annotator.py  models.py  quality_scorer.py  rule_engine.py  rule_registry.py  schema_validator.py  validation_repository.py  validator.py
benchmarks/: benchmark_pipeline.py  locustfile.py
config/: app.yaml  logging.yaml
dashboard/: Home.py  __init__.py  requirements.txt
dashboard/utils/: auth.py  (+4 more)
docker/: Dockerfile  Dockerfile.dashboard  Dockerfile.dev
docs/: 01_SRS.md  02_HLD.md  03_LLD.md  04_ETL_Workflow.md  05_Data_Flow_Diagram.md  06_Component_Diagram.md  07_Folder_Structure.md  08_Development_Roadmap.md  09_Database_Design.md  10_API_Platform_Security.md  10_Ingestion_Engine.md  11_Validation_Engine.md  12_Transformation_Engine.md  13_Cleaning_Engine.md  14_Orchestration_Engine.md  15_Warehouse_Loader.md  17_Operations_Dashboard.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  FIRST_TIME_SETUP.md  INTERVIEW_PREP.md  LOCAL_DEVELOPMENT.md  OPERATIONS_RUNBOOK.md  PORTFOLIO_PACKAGE.md  README.md  RUNNING_THE_PROJECT.md  SECURITY_CHECKLIST.md  SYSTEM_FLOW.md  TROUBLESHOOTING.md
k8s/: configmap.yaml  deployment-api.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pvc.yaml  secret.yaml  service-api.yaml
migrations/: env.py  script.py.mako
scripts/: check_docs.py  check_ingest_schema.py  check_last_run.py  check_pipeline_error.py  create_admin_user.py  create_api_key.py  debug_load.py  deploy_render.py  final_checks.py  finish_render_deploy.py  fix_admin_password.py  fix_dashboard_imports.py  get_render_status.py  health_check.py  render_build_log.py  render_check.py  render_final_deploy.py  render_fix.py  render_get_build_log.py  render_get_db_creds.py  render_logs.py  render_run_migrations.py  render_setenv_deploy.py  reset_database.py  reset_render_env.py  run_dashboard.py  run_demo_pipeline.py  run_migrations.py  run_prod_migrations.py  seed_data.py  setup_database.py  setup_production.py  start_dev.py  status.py  verify_database.py  verify_live.py  verify_prod_login.py  wire_db_and_monitor.py
tests/: __init__.py  conftest.py  fixtures_factory.py
(+237 files in other folders)
