[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "etl-platform"
version = "1.0.0"
description = "Enterprise ETL & Data Quality Platform"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "Data Engineering Team" }]
keywords = ["etl", "data-quality", "pipeline", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
  | .venv
  | .git
)/
'''

# ---------------------------------------------------------------------------
# Ruff — fast linter (replaces flake8 + isort + pyupgrade + many more)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
]
ignore = [
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "S101",   # Use of assert detected (allowed in tests)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
]
unfixable = ["B"]  # Never auto-fix bugbear — review manually

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]   # Relax annotations and security in tests
"scripts/**" = ["ANN", "T"] # Relax in utility scripts
"migrations/**" = ["ANN", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

# ---------------------------------------------------------------------------
# mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sqlalchemy.*",
    "alembic.*",
    "uvicorn.*",
    "APScheduler.*",
    "openpyxl.*",
    "yaml.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest — testing framework
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Fast unit tests with no external dependencies",
    "integration: Integration tests requiring database and file system",
    "slow: Tests that take a long time to run",
    "api: API endpoint tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]

# ---------------------------------------------------------------------------
# coverage — test coverage configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 78
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
